modules/dt.init.less
/* ... */
// Main feature (topic containers)
.ext-discussiontools-visualenhancements-enabled {
	.ext-discussiontools-init-section {
		clear: both;
		margin: 1em 0 0 0;
		padding: 0.5em 0;
		font-weight: bold;
		// stylelint-disable-next-line declaration-no-important
		font-family: sans-serif !important;
		border: 0;
		border-top: 1px solid #a2a9b1;

		&:first-child {
			border-top: 0;
			margin-top: 0;
		}

		// Hide old subscribe link
		&-subscribe {
			display: none;
		}

		&-bar {
			// stylelint-disable-next-line declaration-property-unit-disallowed-list
			font-size: 14px;
			margin-top: 5px;
			display: flex;
			// Use interface language direction (auto-flipped for RTL)
			direction: ltr;
		}

		&-metadata {
			display: flex;
			flex-wrap: wrap;
		}

		&-metaitem {
			font-weight: normal;
			color: #666;
			// Make same height as "unsubscribe" button
			margin: 7px 0;

			& + .ext-discussiontools-init-section-metaitem {
				margin-left: 12px;
				padding-left: 12px;
				border-left: 1px solid #a2a9b1;
			}
		}

		&-actions {
			margin-left: auto;
			// Prevent the focus outline from being cut off (T311662), do not set to negative values
			margin-right: 0;
		}
	}

	// HACK: Can be removed once T311502 is fixed
	// stylelint-disable-next-line no-descending-specificity, selector-type-no-unknown
	mw\3Atocplace:first-child + .ext-discussiontools-init-section {
		border-top: 0;
		margin-top: 0;
	}

	// Also re-style topic header input in new topic tool
	h2.ext-discussiontools-ui-newTopic-sectionTitle .oo-ui-inputWidget-input {
		font-weight: bold;
		font-family: sans-serif;
	}

	/* stylelint-disable no-descending-specificity */
	// Mobile
	&.skin-minerva .ext-discussiontools-init-section {
		flex-wrap: wrap;
		// stylelint-disable-next-line declaration-no-important
		border-bottom: 0 !important;
		margin: 12px 0;
		padding-bottom: 0;
		// The tap-highlight is an odd shape and shows even for cancelled events on -actions,
		// just hide it.
		-webkit-tap-highlight-color: transparent;
		border-top: 1px solid #eaecf0;

		> .mw-headline {
			width: auto;
			flex-grow: 1;
			flex-basis: 0;
		}

		&:first-child {
			border-top: 0;
		}

		&-bar {
			width: 100%;
			flex-wrap: wrap;
		}

		&-actions {
			width: 100%;
			margin-left: 0;
			padding-left: 24px;
		}

		// stylelint-disable-next-line selector-class-pattern
		&.section-heading .ext-discussiontools-init-section-actions {
			// Hidden until expanded
			display: none;
		}

		&-ellipsisButton {
			display: inline-block;
			// stylelint-disable-next-line declaration-property-unit-disallowed-list
			font-size: 14px;
			margin-right: -5px;
			// Fix height so MenuWidget appears in the correct place with wrapped text (T311558)
			height: 32px;
		}

		&-metadata {
			width: 100%;
			padding-left: 24px;
		}

		&-authorCountLabel,
		&-commentCountLabel {
			display: none;
		}

		// stylelint-disable-next-line selector-class-pattern
		&.open-block {
			.ext-discussiontools-init-section-actions {
				display: block;
			}
		}

		.mw-editsection {
			// stylelint-disable-next-line declaration-no-important
			display: none !important;
		}

		.mw-ui-icon + span {
			margin-left: 0;
		}
	}

	&.skin-monobook .ext-discussiontools-init-section {
		&-bar {
			// stylelint-disable-next-line declaration-property-unit-disallowed-list
			font-size: 12px;
		}

		&-actions {
			// Prevent the Apex theme focus outline from being cut off (T311662)
			margin-right: 4px;
		}
	}
	/* stylelint-enable no-descending-specificity */
}

.ext-discussiontools-emptystate {
	display: flex;
	justify-content: space-between;
	// Add space between this and any existing page content above,
	// or page-actions-menu in Minerva for non-existing pages
	margin-top: 1em;
	clear: both;

	> img {
		width: 250px;
	}

	// stylelint-disable-next-line selector-class-pattern
	.mw-parser-output:not( .noarticletext ) & {
		// Separate from existing (non-discussion) content
		margin-top: 2em;
		padding-top: 1em;
		border-top: 1px solid #a2a9b1;
	}
}

// Mobile
@media ( max-width: 719px ) {
	.ext-discussiontools-emptystate {
		display: block;

		.oo-ui-buttonElement {
			display: block;
			text-align: center;

			> a {
				width: 80%;
			}
		}

		> img {
			display: none;
		}
	}
}

.ext-discussiontools-init-replylink-open {
	// stylelint-disable-next-line no-descending-specificity
	.ext-discussiontools-emptystate,
	> .mw-message-box-warning {
		display: none;
	}
}

.skin-minerva.ext-discussiontools-emptystate-shown {
	// The Minerva "Add topic" button is very eye-catching.
	// No need to show it when the empty state banner is shown.
	// stylelint-disable-next-line selector-class-pattern
	.minerva-talk-add-button,
	.ext-discussiontools-init-new-topic {
		display: none;
	}
}
/* ... */

